recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	

	tree

	
	if (steps==0) {
			return  } 
	
	else {	
		
		
		avance(length); 
			droite(angle)
			avance(length*shrink)
			
			
			
			
			}


}

